--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "description": "",
+  "description": "настройка чисто под верстку",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -38,5 +38,6 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mysql": "^2.16.0"
-  }
+  },
+  "main": "index.js"
 }
